--- a/views/head.ejs
+++ b/views/head.ejs
@@ -136,13 +136,13 @@
             <h1 class="logo col-md-3 col-sm-4 block nopop article"  blockid="article" article-type="settings" articleid="site_config"  >
                 <a href="/" ><span class="img" field="logo"><img id="logo" data-size="281 * 84" src="<%=site_config.logo%>" alt="Logo"></span></a>
             </h1><!--//logo-->
-            <div class="info col-md-8 col-sm-8">
+            <div class="info col-sm-9">
 
                 <div class="contact pull-right block nopop article btn-small"  blockid="article" article-type="settings" articleid="site_config">
-                    <p class="phone"><i class="fa fa-phone"></i><span field="phone"><%=site_config.phone||'联系电话'%></span></p>
+                    <!-- <p class="phone"><i class="fa fa-phone"></i><span field="phone"><%=site_config.phone||'联系电话'%></span></p>
                     <br />
-                    <p class="email"><i class="fa fa-envelope"></i><span field="email"><%=site_config.email||'邮箱地址'%></span></p>
-
+                    <p class="email"><i class="fa fa-envelope"></i><span field="email"><%=site_config.email||'邮箱地址'%></span></p><br /> -->
+                    <p class="search"><i class="fa fa-search"></i><input type="text" name="search" id="searchWord" placeholder="请输入搜索词汇" /></p>
                 </div><!--//contact-->
 
             </div><!--//info-->
@@ -167,7 +167,7 @@
                     <li class="nav-item"><a href="/daily">朝九晚五</a></li>
                     <li class="nav-item"><a href="/world">世间词话</a></li>
                     <li class="nav-item"><a href="/entertainment">雕刻时光</a></li>
-                    <li class="nav-item"><a href="/teachers">周末剧场</a></li>
+                    <li class="nav-item"><a href="/weekend">周末剧场</a></li>
                 </ul><!--//nav-->
             </div><!--//navabr-collapse-->
         </div><!--//container-->
