--- a/views/index/blocks/funny.ejs
+++ b/views/index/blocks/funny.ejs
@@ -1,6 +1,12 @@
+
 <%funny.forEach(function(item){%>
-<p class="block nopop article btn-small" blockid="article" article-type="funny" articleid="<%=item._id%>"><i class="fa fa-caret-right"></i><a href="/funny/<%=item._id%>" field="title"><%=item.title%></a><span class="pull-right"><%=item.time%></span></p>
+<p class="block nopop article btn-small" blockid="article" article-type="funny" articleid="<%=item._id%>">
+    <i class="fa fa-caret-right"></i>
+    <a href="/funny/<%=item._id%>" field="title"><%=item.title%></a>
+    <span class="pull-right"><%=item.time%></span>
+</p>
 <%})%>
+
 
 <script>
     console.log(new Date());
