--- a/views/index/blocks/indexWeekend.ejs
+++ b/views/index/blocks/indexWeekend.ejs
@@ -1,8 +1,8 @@
 <div id="weekend-carousel" class="news-carousel carousel slide">
     <div class="carousel-inner">
         <div class="item active">
-            <%for(var i=0;i<Math.min(2,weekendIndex.length);i++){%>
-            <div class="col-xs-6">
+            <%for(var i=0;i<Math.min(3,weekendIndex.length);i++){%>
+            <div class="col-md-4">
                 <div style="width: 330px;height: 245px; margin-right: 20px; display: inline-block;" class="sewise-video" data-url="<%=weekendIndex[i].videoUrl ||'novideo'%>">
                 </div>
             </div>
@@ -10,8 +10,8 @@
         </div><!--//item-->
 
         <div class="item ">
-            <%for(var i=2;i<weekendIndex.length;i++){%>
-                <div class="col-xs-6">
+            <%for(var i=3;i<weekendIndex.length;i++){%>
+                <div class="col-md-4">
                     <div style="width: 330px;height: 245px; margin-right: 20px; display: inline-block;" class="sewise-video" data-url="<%=weekendIndex[i].videoUrl ||'novideo'%>">
                     </div>
                 </div>
