--- a/public/index/css/index.css
+++ b/public/index/css/index.css
@@ -17,16 +17,19 @@ ul{
 }
 .section-content p a{
     display: inline-block;
-    width:92%;
+    width:170px;
     white-space:nowrap;/*强制文本在一行内显示*/
     text-overflow:ellipsis; /*溢出省略号，支持ie、safari（webkit）*/
     -o-text-overflow:ellipsis; /*溢出省略号，支持opera*/
     overflow:hidden;/*溢出隐藏*/
 
 }
-.home-page .section-content p span {
-    display: none;
+@media (max-width: 767px) {
+    .home-page .section-content p span {
+        float: right!important;
+    }
 }
+
 /*.page-wrapper .page-heading {
     margin-bottom: 0px;
 }*/
@@ -600,7 +603,7 @@ div.divider {
     position: relative;
 }
 .overlay{
-    z-index: 9998;
+    z-index: 1000;
     position: absolute;
     top:0px;
     left:0px;
@@ -609,7 +612,7 @@ div.divider {
     background: rgba(0,0,0,.8);
 }
 .expand {
-    z-index: 9998;
+    z-index: 1000;
     display: block;
     position: absolute;
     top: 50%;
