--- a/views/head.ejs
+++ b/views/head.ejs
@@ -160,15 +160,17 @@
                     <span class="icon-bar"></span>
                 </button><!--//nav-toggle-->
             </div><!--//navbar-header-->
-            <div class="navbar-collapse collapse" id="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="nav-item"><a href="/">首页</a></li>
-                    <li class="nav-item"><a href="/funny">囧途趣语</a></li>
-                    <li class="nav-item"><a href="/daily">朝九晚五</a></li>
-                    <li class="nav-item"><a href="/world">世间词话</a></li>
-                    <li class="nav-item"><a href="/entertainment">雕刻时光</a></li>
-                    <li class="nav-item"><a href="/weekend">周末剧场</a></li>
+            <div class="navbar-collapse collapse row" id="navbar-collapse">
+                <ul class="nav navbar-nav col-md-12">
+                    <li class="nav-item col-md-2"><a href="/">首页</a></li>
+                    <li class="nav-item col-md-2"><a href="/funny">囧途趣语</a></li>
+                    <li class="nav-item col-md-2"><a href="/daily">朝九晚五</a></li>
+                    <li class="nav-item col-md-2"><a href="/world">世间词话</a></li>
+                    <li class="nav-item col-md-2"><a href="/entertainment">雕刻时光</a></li>
+                    <li class="nav-item col-md-2"><a href="/weekend">周末剧场</a></li>
                 </ul><!--//nav-->
             </div><!--//navabr-collapse-->
         </div><!--//container-->
     </nav><!--//main-nav-->
+
+
