--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -51,7 +51,7 @@
 
     <div class="row cols-wrapper">
       <div class="col-xs-12" style="padding:0px">
-        <div class="col-md-9">
+        <div class="col-xs-12">
           <section class="video">
             <h1 class="section-heading text-highlight"><span class="line">周末剧场</span></h1>
             <div class="carousel-controls">
@@ -65,16 +65,16 @@
             </div><!--//section-content-->
           </section>
         </div>
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
           <section class="links">
             <h1 class="section-heading text-highlight"><span class="line">读者评论</span></h1>
             <div class="section-content">
 
               <%include blocks/notices.ejs%>
 
-            </div><!--//section-content-->
-          </section><!--//links-->
-        </div><!--//col-md-3-->
+            </div>
+          </section>
+        </div>-->
       </div>
 
     </div><!--//cols-wrapper-->
