--- a/public/index/css/styles-purple.css
+++ b/public/index/css/styles-purple.css
@@ -260,6 +260,9 @@ ul.custom-list-style li {
   font-family: 'open sans', arial, sans-serif;
   font-weight: 500;
 }
+.pagination > li > a {
+  color: #6f7a9f;
+}
 .pagination > .active > a,
 .pagination > .active > span,
 .pagination > .active > a:hover,
