--- a/views/index/footer.ejs
+++ b/views/index/footer.ejs
@@ -25,7 +25,7 @@
 
 </script>
 <!-- ******FOOTER****** -->
-<footer class="footer">
+<footer class="footer" style="margin-top: 70px;">
     <div class="footer-content">
         <div class="container">
             <div class="row" style=" margin-top: 25px;">
