--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -7,7 +7,7 @@
 
 
     <div class="row cols-wrapper">
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-lg-3">
         <section class="links">
           <h1 class="section-heading text-highlight"><span class="line">囧途趣语</span></h1>
           <div class="section-content">
@@ -17,7 +17,7 @@
           </div><!--//section-content-->
         </section><!--//links-->
       </div><!--//col-md-3-->
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-lg-3">
         <section class="links">
           <h1 class="section-heading text-highlight"><span class="line">朝九晚五</span></h1>
           <div class="section-content">
@@ -27,7 +27,7 @@
           </div><!--//section-content-->
         </section><!--//links-->
       </div><!--//col-md-3-->
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-lg-3">
         <section class="links">
           <h1 class="section-heading text-highlight"><span class="line">世间词话</span></h1>
           <div class="section-content">
@@ -37,7 +37,7 @@
           </div><!--//section-content-->
         </section><!--//links-->
       </div><!--//col-md-3-->
-      <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="col-xs-12 col-sm-6 col-lg-3">
         <section class="links">
           <h1 class="section-heading text-highlight"><span class="line">雕刻时光</span></h1>
           <div class="section-content">
